--- a/src/resources/views/user/headerUser.ejs
+++ b/src/resources/views/user/headerUser.ejs
@@ -92,12 +92,14 @@
                                                 <input type="text" name="keyword" value="" autocomplete="off"
                                                     placeholder="Tìm kiếm" class="input_header_1 form-control white"
                                                     required="" />
+                                                <button class="btn btn-outline-secondary cart" type="submit"
+                                                    id="button-addon2"><i class="fa fa-search"></i></button>
                                             </form>
                                         </div>
                                         <div class="col-lg-2">
-                                            <button class="btn btn-outline-secondary cart" type="submit"
-                                                id="button-addon2"><i class="fa fa-search"></i></button>
+                                            <a href="/cart" class="btn btn-secondary cart">gio hang</a>
                                         </div>
+
                                     </div>
             </div>
 
