--- a/src/resources/views/admin/aside.ejs
+++ b/src/resources/views/admin/aside.ejs
@@ -138,7 +138,7 @@
                     </ul>
                 </li>
                 <li class="nav-item has-treeview">
-                    <a href="#" class="nav-link">
+                    <a href="/admin/hoadon" class="nav-link">
                         <i class="nav-icon fas fa-table"></i>
                         <p>
                             Hóa đơn
