--- a/src/resources/views/user/chi_tiet_sp.ejs
+++ b/src/resources/views/user/chi_tiet_sp.ejs
@@ -13,7 +13,8 @@
                         class="" alt="...">
                 </div>
                 <div class="text-center">
-                    <button class="btn btn-primary">Thêm với giỏ hàng</button>
+                    <a href="/add_to_cart/<%= productDetail.chi_tiet_id %>" class="btn btn-primary">Thêm với giỏ
+                        hàng</a>
                     <button class="btn btn-success">Mua ngay</button>
                 </div>
             </div>
