--- a/src/resources/views/user/cart.ejs
+++ b/src/resources/views/user/cart.ejs
@@ -1,6 +1,68 @@
 <%- include('headerUser.ejs') %>
-
     <div class="container" style="margin-top: 150px; margin-bottom: 150px">
+        <table style="margin-top: 50px;" class="table table-PW table-striped table-hover table-borderless align-middle">
+            <thead class="table-light">
+                <caption>Danh sách sản phẩm có trong giỏ hàng </caption>
+                <tr>
+                    <th>STT</th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody class="table-group-divider">
+                <% if (cartItems && cartItems.length> 0) { %>
+                    <% cartItems.forEach(function (item, index) { %>
+                        <tr>
+                            <td>
+                                <%= index + 1 %>
+                            </td>
+                            <td>
+                                <%= item.ten_san_pham %>
+                            </td>
+                            <td>
+                                <%= item.mau_sac %>
+                            </td>
+                            <td>
+                                <%= item.gia_ban %>
+                            </td>
+                            <td>
+                                <%= item.so_luong %>
+                            </td>
+                            <td>
+                                <input type="checkbox" name="selectedProducts" value="<%= item.id %>">
+                            </td>
+                            <td>
+                                <div class="d-flex ">
+                                    <a href="/admin/edit_nhanvien" class="btn btn-outline-success btn-sm mx-1">Sửa</a>
+                                    <a href="/admin/delete_tinh" class="btn btn-outline-danger btn-sm mx-1">Xóa</a>
+                                </div>
+                            </td>
+                        </tr>
+                        <% }); %>
+                            <% } else { %>
+                                <tr>
+                                    <td colspan="7">Không có dữ liệu</td>
+                                </tr>
+                                <% } %>
 
+            </tbody>
+        </table>
+
+        <div class="row mt-5">
+            <div class="col-lg-4">
+
+            </div>
+            <div class="col-lg-4"></div>
+            <div class="col-lg-4">
+                <p>TỔNG TIỀN</p>
+                <hr>
+                <p>Tổng tiền:</p>
+                <p id="tong_tien_thanh_toan"></p>
+
+                <button class="btn btn-primary" onclick="datHang()">ĐẶT HÀNG</button>
+            </div>
+        </div>
     </div>
     <%- include('footerUser.ejs') %>
