--- a/src/resources/views/user/cart.ejs
+++ b/src/resources/views/user/cart.ejs
@@ -61,8 +61,35 @@
                 <p>Tổng tiền:</p>
                 <p id="tong_tien_thanh_toan"></p>
 
-                <button class="btn btn-primary" onclick="datHang()">ĐẶT HÀNG</button>
+                <button class="btn btn-primary" id="submitBtn">ĐẶT HÀNG</button>
             </div>
         </div>
     </div>
+
+    <script>
+        // JavaScript code to handle getting selected product IDs and sending them to the server
+        document.getElementById('submitBtn').addEventListener('click', function () {
+            var selectedProducts = [];
+            var checkboxes = document.getElementsByName('selectedProducts');
+            checkboxes.forEach(function (checkbox) {
+                if (checkbox.checked) {
+                    selectedProducts.push(checkbox.value);
+                }
+            });
+
+            // Now 'selectedProducts' array contains the IDs of the selected products
+            // You can send this array to the server using AJAX
+            var xhr = new XMLHttpRequest();
+            xhr.open('POST', '/submit_selected_products', true);
+            xhr.setRequestHeader('Content-Type', 'application/json');
+            xhr.onreadystatechange = function () {
+                if (xhr.readyState === 4 && xhr.status === 200) {
+                    // Request was successful
+                    console.log(xhr.responseText); // Log the server response
+                }
+            };
+            xhr.send(JSON.stringify({ selectedProducts: selectedProducts }));
+        });
+
+    </script>
     <%- include('footerUser.ejs') %>
