--- a/src/resources/views/user/headerUser.ejs
+++ b/src/resources/views/user/headerUser.ejs
@@ -86,7 +86,7 @@
                                                 </ul>
                                             </nav>
                                         </div>
-                                        <div class="col-lg-4">
+                                        <div class="col-lg-3">
                                             <form action="" method="get" class="input-group form_input search-bar "
                                                 role="search">
                                                 <input type="text" name="keyword" value="" autocomplete="off"
@@ -96,9 +96,12 @@
                                                     id="button-addon2"><i class="fa fa-search"></i></button>
                                             </form>
                                         </div>
-                                        <div class="col-lg-2">
+                                        <div class="col-lg-3">
                                             <a href="/cart" class="btn btn-secondary cart">gio hang</a>
+                                            <a href="/order" class="btn btn-outline-primary cart">Đơn hàng</a>
                                         </div>
+                                        
+                                        
 
                                     </div>
             </div>
