--- a/src/resources/views/user/order.ejs
+++ b/src/resources/views/user/order.ejs
@@ -2,48 +2,143 @@
 
 
 
-<div class="container" style="margin-top: 150px; margin-bottom: 150px">
+  <div class="container" style="margin-top: 150px; margin-bottom: 150px">
     <div class="col-lg-3">
 
     </div>
     <div class="col-lg-9">
-        <ul class="nav nav-tabs">
-            <li class="nav-item">
-              <a class="nav-link active" href="#cho_xac_nhan" data-toggle="tab">Chờ xác nhận</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#da_xac_nhan" data-toggle="tab">Đã xác nhận</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#dang_giao" data-toggle="tab">Đang giao hàng</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#da_giao" data-toggle="tab">Đã giao</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#da_huy" data-toggle="tab">Đã hủy</a>
-            </li>
-          </ul>
-          
-          <div class="tab-content">
-            <div class="tab-pane active" id="cho_xac_nhan">
-                Chờ xác nhận
-            </div>
-            <div class="tab-pane" id="da_xac_nhan">
-                Đã xác nhận
-            </div>
-            <div class="tab-pane" id="dang_giao">
-                Đang giao hàng
-            </div>
-            <div class="tab-pane" id="da_giao">
-                Đã giao
-            </div>
-            <div class="tab-pane" id="da_huy">
-                Đã hủy
-            </div>
-          </div>         
+      <ul class="nav nav-tabs">
+        <li class="nav-item">
+          <a class="nav-link active" href="#cho_xac_nhan" data-toggle="tab">Chờ xác nhận</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#da_xac_nhan" data-toggle="tab">Đã xác nhận</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#dang_giao" data-toggle="tab">Đang giao hàng</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#da_giao" data-toggle="tab">Đã giao</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#da_huy" data-toggle="tab">Đã hủy</a>
+        </li>
+      </ul>
+
+      <div class="tab-content">
+        <div class="tab-pane active" id="cho_xac_nhan">
+          <% var hasActiveProducts=false; if (data && data.length> 0) {
+            data.forEach(function(order, index) {
+            if (order.trang_thai === 1 && user.id == order.khach_hang_id) {
+            hasActiveProducts = true;
+            %>
+            <tr>
+              <td>
+                <%= order.ten_san_pham %> - <%= order.mau_sac %> - <%= order.dung_luong %>
+              </td>
+              <td>
+                <%= order.gia_ban %>
+              </td>
+              <td>
+                <%= order.so_luong %>
+              </td>
+              <td>
+                <%= order.tong_tien %>
+              </td>
+            </tr>
+            <% } }); } if (!hasActiveProducts) { %>
+              <tr>
+                <td colspan="2">Không có sản phẩm </td>
+              </tr>
+              <% } %>
+
+                
+        </div>
+        <div class="tab-pane" id="da_xac_nhan">
+          <% var hasActiveProducts=false; if (data && data.length> 0) {
+            data.forEach(function(order, index) {
+            if (order.trang_thai === 2 && user.id == order.khach_hang_id) {
+            hasActiveProducts = true;
+            %>
+            <tr>
+              <td>
+                <%= order.ten_san_pham %> - <%= order.mau_sac %> - <%= order.dung_luong %>
+              </td>
+              <td>
+                <%= order.gia_ban %>
+              </td>
+              <td>
+                <%= order.so_luong %>
+              </td>
+              <td>
+                <%= order.tong_tien %>
+              </td>
+            </tr>
+            <% } }); } if (!hasActiveProducts) { %>
+              <tr>
+                <td colspan="2">Không có sản phẩm </td>
+              </tr>
+              <% } %>
+        </div>
+        <div class="tab-pane" id="dang_giao">
+      
+          <% var hasActiveProducts=false; if (data && data.length> 0) {
+            data.forEach(function(order, index) {
+            if (order.trang_thai === 3 && user.id == order.khach_hang_id) {
+            hasActiveProducts = true;
+            %>
+            <tr>
+              <td>
+                <%= order.ten_san_pham %> - <%= order.mau_sac %> - <%= order.dung_luong %>
+              </td>
+              <td>
+                <%= order.gia_ban %>
+              </td>
+              <td>
+                <%= order.so_luong %>
+              </td>
+              <td>
+                <%= order.tong_tien %>
+              </td>
+            </tr>
+            <% } }); } if (!hasActiveProducts) { %>
+              <tr>
+                <td colspan="2">Không có sản phẩm </td>
+              </tr>
+              <% } %>
+        </div>
+        <div class="tab-pane" id="da_giao">
+          <% var hasActiveProducts=false; if (data && data.length> 0) {
+            data.forEach(function(order, index) {
+            if (order.trang_thai === 4 && user.id == order.khach_hang_id) {
+            hasActiveProducts = true;
+            %>
+            <tr>
+              <td>
+                <%= order.ten_san_pham %> - <%= order.mau_sac %> - <%= order.dung_luong %>
+              </td>
+              <td>
+                <%= order.gia_ban %>
+              </td>
+              <td>
+                <%= order.so_luong %>
+              </td>
+              <td>
+                <%= order.tong_tien %>
+              </td>
+            </tr>
+            <% } }); } if (!hasActiveProducts) { %>
+              <tr>
+                <td colspan="2">Không có sản phẩm </td>
+              </tr>
+              <% } %>
+        </div>
+        <div class="tab-pane" id="da_huy">
+          Đã hủy
+        </div>
+      </div>
     </div>
-</div>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
-<%- include('footerUser.ejs') %>
+  </div>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
+  <%- include('footerUser.ejs') %>
