--- a/src/resources/views/user/order.ejs
+++ b/src/resources/views/user/order.ejs
@@ -103,7 +103,7 @@
             </tr>
             <% } }); } if (!hasActiveProducts) { %>
               <tr>
-                <td colspan="2">Không có sản phẩm </td>
+                <td colspan="2">Không có sản phẩm haha</td>
               </tr>
               <% } %>
         </div>
